--- a/src/app/home/components/navbar/navbar.component.html
+++ b/src/app/home/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
-  <span>Deepak</span>
+  <span>Hello! {{loggedStaff}}</span>
   <div class="spacer"></div>
-  <a mat-button routerLink="assessment" (click)="openDialog()">
+  <a mat-button (click)="openDialog()">
     Create Assessment +
   </a>
   <button mat-button
