--- a/src/app/home/components/assessment/assessment.component.html
+++ b/src/app/home/components/assessment/assessment.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="quesForm">
-  <h2 mat-dia  log-title>Create Assignment</h2>
+  <h2 mat-dia log-title>Create Assignment</h2>
   <mat-dialog-content class="mat-typography">
     <ng-container *ngIf="!questions.length">
       <h1>Enter the Title of Assignment</h1>
       <app-input
         [placeholder]="'Assignment Title'"
         [type]="'text'"
-        [loginForm]="quesForm"
+        [formGroup]="quesForm"
         [control]="'AssignmentTitle'"
       ></app-input>
     </ng-container>
@@ -14,13 +14,13 @@
     <app-input
       [placeholder]="'Question'"
       [type]="'text'"
-      [loginForm]="quesForm"
+      [formGroup]="quesForm"
       [control]="'question'"
     ></app-input>
     <h4>Mode of Answer</h4>
-    <mat-form-field appearance="outline">
-      <mat-label>Preffered Mode of Answer</mat-label>
-      <mat-select (selectionChange)="selectedOpt($event)">
+    <mat-form-field appearance="outline" [formGroup] = "quesForm">
+      <mat-label>Preferred Mode of Answer</mat-label>
+      <mat-select (selectionChange)="selectedOpt($event)" formControlName="dropDown">
         @for (opt of optType; track optType) {
         <mat-option [value]="opt.value">{{ opt.viewValue }}</mat-option>
         }
@@ -30,35 +30,45 @@
       *ngIf="selectedDropDown === 'radio' || selectedDropDown === 'checkBox'"
     >
       Options
-      <form [formGroup]="optionsForm">
-        <app-input
-          [placeholder]="'Option'"
-          [type]="'text'"
-          [loginForm]="optionsForm"
-          [control]="'option1'"
-        ></app-input>
-        <app-input
-          [placeholder]="'Option'"
-          [type]="'text'"
-          [loginForm]="optionsForm"
-          [control]="'option2'"
-        ></app-input>
+      <form [formGroup]="optionsForm" class="optionForm">
+        <ng-container *ngFor="let option of optionsArray; index as i">
+          <div class="optionWrapper">
+            <app-input
+            [placeholder]="'Option'"
+            [type]="'text'"
+            [formGroup]="optionsForm"
+            [control]="option"
+          ></app-input>
+          @if (i>1) {<button class="delete" mat-button (click)="delOption(i)">
+            <mat-icon class="delete">delete</mat-icon></button
+          >}
+          </div>          
+        </ng-container>
       </form>
+      <button *ngIf="selectedDropDown == 'radio' || selectedDropDown == 'checkBox'"
+          mat-raised-button
+          (click)="addOption()"
+          [disabled]="isAddDisabled"
+          color="primary" 
+        >
+          Add Option
+        </button>
     </div>
-    <section class="example-section">
-      <mat-checkbox class="example-margin" (change)="checkBoxHandler($event)"
-        >Required</mat-checkbox
+    <section class="example-section" [formGroup]="quesForm">
+      <mat-checkbox class="example-margin" formControlName="isRequired" (change)="isRequiredHandler($event)"
+       [formGroup] = "quesForm" >Required</mat-checkbox
       >
-      <mat-checkbox class="example-margin">Others</mat-checkbox>
     </section>
-    <button mat-raised-button color="primary" (click)="addQuestion()">
-      Add Another Question
+    <button mat-raised-button color="primary" (click)="saveQuestion()">
+      Save Question
     </button>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button (click)="saveAssignment()" color="primary">
+    @if (questions.length ) {
+    <button mat-raised-button (click)="saveAssignment()" color="primary" mat-dialog-close>
       Create Assignment
     </button>
+    }
   </mat-dialog-actions>
 </form>
