--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="example-form-field" appearance="outline" [formGroup]="loginForm">
+<mat-form-field class="example-form-field" appearance="outline" [formGroup]="formGroup">
   <mat-label>{{ placeholder }}</mat-label>
   <input matInput
   placeholder= {{placeholder}}
