--- a/src/app/home/components/homepage/homepage.component.html
+++ b/src/app/home/components/homepage/homepage.component.html
@@ -1,2 +1,1 @@
-<app-navbar></app-navbar>
-<app-takeassignment></app-takeassignment>
+<app-navbar></app-navbar> <app-takeassignment></app-takeassignment>
